--- a/BP4DrankGigant/StyleSheet.css
+++ b/BP4DrankGigant/StyleSheet.css
@@ -154,11 +154,16 @@ nav ul li ul li a:hover{
     color:white;
     font-size:21px;
 }
-section.inhoud{
+
+section.inhoud {
   float: left;
-  width: 750px;
+  width: 930px;
   height: 940px;
   border-right: 0px solid #eeeeee;
   display: block;
   margin-top: 20px;
+  margin-left: 5px;
+  padding-left:10px;
+  margin-right: 5px;
+  background-color:green;
 }
