--- a/BP4DrankGigant/StyleSheet.css
+++ b/BP4DrankGigant/StyleSheet.css
@@ -4,7 +4,7 @@
 	width: 940px;
 	margin: 0px auto 20px auto;
 	border: 2px solid #000000;
-	background-color: #ffffff;}
+	background-color: gray;}
 
 header h1{
 	height: 1px;
@@ -167,16 +167,50 @@ section.inhoud {
   margin-right: 5px;
 }
 #links{
-    background-color:red;
-    display:inline-block;
-    height: 200px;
+    height: 80px;
     width: 180px;
     margin: 10px 10px 10px 10px;
+    border: 1px solid;
 }
 #rechts{
-    background-color:yellow;
+    height: 80px;
+    width: 180px;
+    margin: 10px 10px 10px 10px;
+    border: 1px solid;
+}
+.categorie{
+    height: 280px;
+    width: 200px;
+    position:absolute;
+    margin-top: 20px;
+    margin-left:15px;
+    border: 1px solid;
+}
+
+#AccountInloggen{
+    height: 700px;
+    width: 250px;
+    margin-top: 15px;
+    margin-left: 300px;
+    padding-top: 10px;
+    padding-left: 10px;
+    position:absolute;
+    border: 1px solid;
+}
+#AccountMaken{
+    height: 700px;
+    width: 250px;
+    margin-top: 15px;
+    margin-left: 10px;
+    padding-top: 10px;
+    padding-left: 10px;
+    border: 1px solid;
+    position:absolute;
+}
+/*#Content{
+    background-color:green;
     display:inline-block;
     height: 200px;
     width: 180px;
     margin: 10px 10px 10px 10px;
-}
+}*/
